--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Weather_Vinokurov"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+           Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Grid>
+        <ComboBox SelectionChanged="SelectDay"
+              Name="Days"
+        VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10"/>
+        <Button Content="Обновить"
+            Click="UpdateWeather" Margin="582,9,10,389"/>
+        <ScrollViewer Margin="10,37,10,10">
+            <StackPanel Name="parent">
 
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
