--- a/Elements/Item.xaml
+++ b/Elements/Item.xaml
@@ -4,19 +4,56 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Weather_Vinokurov.Elements"
-             mc:Ignorable="d">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-        <Label x:Name="lHour"/>
-        <Label x:Name="lCondition" Grid.Column="1"/>
-        <Label x:Name="lHumidity" Grid.Column="2"/>
-        <Label x:Name="lPrecType" Grid.Column="3"/>
-        <Label x:Name="lTemp" Grid.Column="4"/>
-    </Grid>
+                         mc:Ignorable="d" 
+             Height="90">
+
+    <Border Background="#FF716D6D"  Padding="10" Margin="0,5">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.15*"/>
+                <ColumnDefinition Width="0.4*"/>
+                <ColumnDefinition Width="0.25*"/>
+                <ColumnDefinition Width="0.2*"/>
+            </Grid.ColumnDefinitions>
+
+            <Label x:Name="lHour" 
+                   Grid.Column="0" 
+                   Foreground="White" 
+                   FontSize="16" 
+                   FontWeight="Bold" 
+                   VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"
+                   Padding="0"/>
+
+            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label x:Name="lTemp" 
+                       Foreground="White" 
+                       FontSize="18" 
+                       FontWeight="Bold" 
+                       HorizontalAlignment="Center"
+                       Padding="0"/>
+                <Label x:Name="lCondition" 
+                       Foreground="White" 
+                       FontSize="14" 
+                       HorizontalAlignment="Center"
+                       Padding="0"/>
+            </StackPanel>
+
+            <Label x:Name="lPrecType" 
+                   Grid.Column="2" 
+                   Foreground="White" 
+                   FontSize="16" 
+                   VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"
+                   Padding="0"/>
+
+            <Label x:Name="lHumidity" 
+                   Grid.Column="3" 
+                   Foreground="White" 
+                   FontSize="16" 
+                   VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"
+                   Padding="0"/>
+        </Grid>
+    </Border>
 </UserControl>
