--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,33 +1,66 @@
 ﻿<Window x:Class="Weather_Vinokurov.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Weather_Vinokurov"
-        mc:Ignorable="d"
-        Title="Weather App" Height="450" Width="800" MinHeight="450" MinWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        Title="Погода" Height="600" Width="800">
 
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="10">
-            <TextBox Name="txtCity" Width="200" 
-                     Text="Пермь" Margin="0,0,10,0"/>
-            <Button Content="Получить погоду" 
-                    Click="GetWeatherByCity" 
-                    Margin="0,0,10,0" Width="120"/>
-            <ComboBox SelectionChanged="SelectDay"
-                      Name="Days"
-                      Width="200" Margin="0,0,10,0"/>
-            <Button Content="Обновить"
-                    Click="UpdateWeather" Width="80"/>
-        </StackPanel>
-
-        <ScrollViewer Grid.Row="1" Margin="10">
-            <StackPanel Name="parent">
+    <StackPanel>
+        <!-- Панель поиска -->
+        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Padding="10">
+            <StackPanel Orientation="Horizontal">
+                <TextBox Name="CityTextBox" 
+                         Width="300" 
+                         Height="30" 
+                         Margin="5"
+                         VerticalContentAlignment="Center"/>
+                <Button Name="SearchButton" 
+                        Content="Найти" 
+                        Click="SearchButton_Click"
+                        Width="80" 
+                        Height="30" 
+                        Margin="5"/>
             </StackPanel>
+        </Border>
+
+        <!-- Информация и выбор дня -->
+        <Border BorderBrush="LightGray" BorderThickness="0,0,0,1" Padding="10">
+            <StackPanel>
+                <TextBlock Name="LocationText" 
+                           Text="Пермь" 
+                           FontSize="16" 
+                           Margin="5"/>
+
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <ComboBox Name="Days" 
+                              Width="150" 
+                              Height="30" 
+                              Margin="0,0,10,0"
+                              SelectionChanged="SelectDay"/>
+                    <Button Content="Обновить" 
+                            Click="UpdateWeather" 
+                            Width="80" 
+                            Height="30"/>
+                </StackPanel>
+            </StackPanel>
+        </Border>
+
+        <!-- Заголовки таблицы -->
+        <Grid Margin="10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Время" Grid.Column="0" Margin="5"/>
+            <TextBlock Text="Погода" Grid.Column="1" Margin="5"/>
+            <TextBlock Text="Осадки" Grid.Column="2" Margin="5"/>
+            <TextBlock Text="Влажность" Grid.Column="3" Margin="5"/>
+        </Grid>
+
+        <!-- Прогнозы -->
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <StackPanel Name="parent" Margin="10"/>
         </ScrollViewer>
-    </Grid>
+    </StackPanel>
 </Window>
